zero-schema-macros/tests/ui/fail/10_tagged_root_buffer.stderr
error[E0277]: the trait bound `Payload: WireType` is not satisfied
  --> tests/ui/fail/10_tagged_root_buffer.rs:17:45
   |
17 |     type PayloadBuffer = zs::schema_buffer!(Payload);
   |                                             ^^^^^^^ the trait `WireType` is not implemented for `Payload`
   |
   = help: the trait `WireType` is implemented for `Kind`

error[E0277]: the trait bound `Payload: WireType` is not satisfied
  --> tests/ui/fail/10_tagged_root_buffer.rs:18:34
   |
18 |     let _ = core::mem::size_of::<PayloadBuffer>();
   |                                  ^^^^^^^^^^^^^ the trait `WireType` is not implemented for `Payload`
   |
   = help: the trait `WireType` is implemented for `Kind`
